--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --baseHref=/webradio/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -12,13 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.3",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.3",
     "@angular/compiler": "~8.2.3",
     "@angular/core": "~8.2.3",
     "@angular/forms": "~8.2.3",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
+    "@angular/pwa": "^0.803.15",
     "@angular/router": "~8.2.3",
+    "@angular/service-worker": "~8.2.3",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
