--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -5,7 +5,7 @@
   "background_color": "#fafafa",
   "display": "standalone",
   "scope": "/",
-  "start_url": "https://rzeiler.github.io/webradio/",
+  "start_url": "https://rzeiler.github.io/",
   "icons": [
     {
       "src": "assets/icons/icon-72x72.png",
