--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "webradio",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod --baseHref=docs",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~8.2.3",
-    "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.3",
-    "@angular/compiler": "~8.2.3",
-    "@angular/core": "~8.2.3",
-    "@angular/forms": "~8.2.3",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.3",
-    "@angular/platform-browser-dynamic": "~8.2.3",
-    "@angular/pwa": "^0.803.15",
-    "@angular/router": "~8.2.3",
-    "@angular/service-worker": "~8.2.3",
-    "hammerjs": "^2.0.8",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.0",
-    "@angular/cli": "~8.3.0",
-    "@angular/compiler-cli": "~8.2.3",
-    "@angular/language-service": "~8.2.3",
-    "@types/node": "~8.9.4",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
-  }
+    "name": "webradio",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build --prod --baseHref=/webradio/",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~8.2.3",
+        "@angular/cdk": "~8.2.3",
+        "@angular/common": "~8.2.3",
+        "@angular/compiler": "~8.2.3",
+        "@angular/core": "~8.2.3",
+        "@angular/forms": "~8.2.3",
+        "@angular/material": "^8.2.3",
+        "@angular/platform-browser": "~8.2.3",
+        "@angular/platform-browser-dynamic": "~8.2.3",
+        "@angular/pwa": "^0.803.15",
+        "@angular/router": "~8.2.3",
+        "@angular/service-worker": "~8.2.3",
+        "hammerjs": "^2.0.8",
+        "local-storage-db": "^1.0.0",
+        "rxjs": "~6.4.0",
+        "tslib": "^1.10.0",
+        "zone.js": "~0.9.1"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.803.0",
+        "@angular/cli": "~8.3.0",
+        "@angular/compiler-cli": "~8.2.3",
+        "@angular/language-service": "~8.2.3",
+        "@types/node": "~8.9.4",
+        "ts-node": "~7.0.0",
+        "tslint": "~5.15.0",
+        "typescript": "~3.5.3"
+    }
 }
