--- a/angular.json
+++ b/angular.json
@@ -11,8 +11,9 @@
             "prefix": "app",
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:browser",
+                    "builder": "@angular-builders/custom-webpack:browser",
                     "options": {
+                        "indexTransform": "./index-html-transform.js",
                         "outputPath": "docs",
                         "index": "src/index.html",
                         "main": "src/main.ts",
