--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
         "local-storage-db": "^1.0.0",
         "rxjs": "~6.4.0",
         "tslib": "^1.10.0",
+        "url-parse": "^1.4.7",
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.803.0",
+        "@angular-builders/custom-webpack": "^8.2.0",
+        "@angular-devkit/build-angular": "^0.803.19",
         "@angular/cli": "~8.3.0",
         "@angular/compiler-cli": "~8.2.3",
         "@angular/language-service": "~8.2.3",
