--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build --prod --baseHref=/webradio/",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
+        "static-serve": "cd docs && live-server --port=4200 --host=localhost --mount=/webradio:./ --entry-file=/index.html",
+        "json-to-modul": "node transform.js"
     },
     "private": true,
     "dependencies": {
@@ -24,8 +23,10 @@
         "@angular/router": "~8.2.3",
         "@angular/service-worker": "~8.2.3",
         "hammerjs": "^2.0.8",
+        "live-server": "^1.2.1",
         "local-storage-db": "^1.0.0",
         "rxjs": "~6.4.0",
+        "sync-request": "^6.1.0",
         "tslib": "^1.10.0",
         "url-parse": "^1.4.7",
         "zone.js": "~0.9.1"
