--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/service-worker/config/schema.json",
-  "index": "/index.html",
+  "index": "/index.html", 
   "assetGroups": [
     {
       "name": "app",
@@ -9,10 +9,9 @@
         "files": [
           "/favicon.ico",
           "/index.html",
-          "/manifest.webmanifest",
+          "/manifest.json",
           "/*.css",
-          "/*.js",
-          "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani|json)"
+          "/*.js"
         ]
       }
     }, {
