--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build --prod --baseHref=/webradio/",
-        "static-serve": "cd docs && live-server --port=4200 --host=localhost --mount=/webradio:./ --entry-file=/index.html",
+        "build-local": "ng build --prod ",
+        "server":"http-server -p 8081 -c-1 docs/",
         "json-to-modul": "node transform.js"
     },
     "private": true,
@@ -23,7 +24,7 @@
         "@angular/router": "~8.2.3",
         "@angular/service-worker": "~8.2.3",
         "hammerjs": "^2.0.8",
-        "live-server": "^1.2.1",
+        "http-server": "^0.11.1",
         "local-storage-db": "^1.0.0",
         "rxjs": "~6.4.0",
         "sync-request": "^6.1.0",
