--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "server": "http-server -p 8080 -c-1 dist/",
+    "server": "http-server -p 8080 -c-1 docs/",
     "json-to-modul": "node transform.js"
   },
   "private": true,
