--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build --prod",
-        "build-github": "ng build --prod --baseHref=/webradio/ --deployUrl=https://rzeiler.github.io/webradio/",
+        "build-github": "ng build --prod --baseHref=/webradio/",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
