--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -4,8 +4,8 @@
     "theme_color": "#303030",
     "background_color": "#303030",
     "display": "standalone",
-    "scope": "/",
-    "start_url": "/",
+    "scope": "/webradio",
+    "start_url": "/webradio",
     "icons": [{
             "src": "assets/icons/icon-72x72.png",
             "sizes": "72x72",
