--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -5,7 +5,7 @@
     "background_color": "#303030",
     "display": "standalone",
     "scope": "/",
-    "start_url": "/webradio",
+    "start_url": "/",
     "icons": [{
             "src": "assets/icons/icon-72x72.png",
             "sizes": "72x72",
